# tree-sitter-holyc

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  grammar.js  lib.rs  package.json  tree-sitter.json
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basics.txt  examples.txt
test/fixtures/: calls.hc  control_flow.hc  for_loop.hc  hello.hc  secularize.hc  top_level.hc  types.hc
