[package]
name = "tree-sitter-holyc"
version = "0.0.1"
description = "HolyC grammar for tree-sitter — TempleOS / Terry Davis dialect"
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/undivisible/tree-sitter-holyc"
keywords = ["tree-sitter", "holyc", "grammar", "parser", "templeos"]
categories = ["parsing", "text-editors"]

[lib]
path = "lib.rs"

include = [
  "lib.rs",
  "build.rs",
  "grammar.js",
  "src/*",
  "queries/*",
  "corpus/*",
  "test/*",
  "tree-sitter.json",
]

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.26"

[build-dependencies]
cc = "1.0"